<resources>
    <string name="app_name">Wine Tasting</string>
    <string name="rate_your_wines">Rate your wines</string>
    <string name="check">Check</string>
    <string name="amount">Amount</string>
    <string name="btnRecyclerView">To Recycler View</string>

    <string name="activity_main_q1">What wine would you like to drink ?</string>
    <string name="activity_main_q1_rb1">Red</string>
    <string name="activity_main_q1_rb2">White</string>
    <string name="activity_main_q1_rb3">Rose</string>

    <string name="activity_main_q2">What about the body ?</string>
    <string name="activity_main_q2_rb1">Light body</string>
    <string name="activity_main_q2_rb2">Medium body</string>
    <string name="activity_main_q2_rb3">Full body</string>

    <string name="wine1">Wine 1</string>
    <string name="wine2">Wine 2</string>
    <string name="wine3">Wine 3</string>
    <string name="wine4">Wine 4</string>
    <string name="wine5">Wine 5</string>
    <string name="wine6">Wine 6</string>
    <string name="wine7">Wine 7</string>
    <string name="wine8">Wine 8</string>
    <string name="wine9">Wine 9</string>
    <string name="wine10">Wine 10</string>

</resources>